--- a/projects/vs-2015/Box2D Rigid Bodies.vcxproj
+++ b/projects/vs-2015/Box2D Rigid Bodies.vcxproj
@@ -94,7 +94,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)..\..\libraries\box2d-2.3.1\Build\vs2015\bin\x32\Debug;$(SolutionDir)..\..\libraries\sfml-2.3.2-windows-vc14-32bit\lib;%(AdditionalIncludeDirectories);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)..\..\libraries\box2d-2.3.1\Build\vs2015\binx\x32\DebugLib;$(SolutionDir)..\..\libraries\sfml-2.3.2-windows-vc14-32bit\lib;%(AdditionalIncludeDirectories);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-main-d.lib;sfml-system-s-d.lib;sfml-window-s-d.lib;sfml-graphics-s-d.lib;Box2D.lib;freetype.lib;jpeg.lib;opengl32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
