--- a/projects/vs-2015/Box2D Rigid Bodies.vcxproj.filters
+++ b/projects/vs-2015/Box2D Rigid Bodies.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\..\code\Scene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\code\ContactListener.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\code\RigidBody.hpp">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\code\Scene.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\code\ContactListener.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
