--- a/projects/vs-2015/Box2D Rigid Bodies.vcxproj.filters
+++ b/projects/vs-2015/Box2D Rigid Bodies.vcxproj.filters
@@ -39,9 +39,6 @@
     <ClCompile Include="..\..\code\ParticleEmitter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\code\RectangleArea.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\code\CircleParticle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -81,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\code\CircleParticle.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\code\ConeArea.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
